--- a/config.toml
+++ b/config.toml
@@ -14,6 +14,7 @@ math = true          # enable KaTeX (https://katex.org/) globally
 [params]
   [params.style]  # appearance options (can be omitted)
     fontFamily = "Inconsolata"
+    fontSize = "1.4em"
     pageWidth = "100%"
     avatarSize = "90px"
 
