--- a/config.toml
+++ b/config.toml
@@ -14,8 +14,8 @@ math = true          # enable KaTeX (https://katex.org/) globally
 [params]
   [params.style]  # appearance options (can be omitted)
     fontFamily = "Inconsolata"
-    fontSize = "1.4em"
-    pageWidth = "100%"
+    fontSize = "2em"
+    pageWidth = "80ch"
     avatarSize = "90px"
 
 [permalinks]
