spacing and font

--- a/config.toml
+++ b/config.toml
@@ -14,7 +14,7 @@ math = true          # enable KaTeX (https://katex.org/) globally
 
 [params]
   [params.style]  # appearance options (can be omitted)
-    fontFamily = "Inconsolata"
+    fontFamily = "Courier New"
     fontSize = "1.9em"
     pageWidth = "80ch"
     avatarSize = "90px"
