--- a/config.yaml
+++ b/config.yaml
@@ -79,3 +79,18 @@ params:
 #   goldmark:
 #     renderer:
 #       unsafe: true # enable raw HTML in Markdown
+markup:
+  highlight:
+    anchorLineNos: false
+    codeFences: true
+    guessSyntax: false
+    hl_Lines: ""
+    hl_inline: false
+    lineAnchors: ""
+    lineNoStart: 1
+    lineNos: false
+    lineNumbersInTable: true
+    noClasses: true
+    noHl: false
+    style: modus-vivendi
+    tabWidth: 4
