--- a/config.yaml
+++ b/config.yaml
@@ -47,7 +47,7 @@ params:
   dateFormat: "2006-01-02"
   paginationSinglePost: true
   style: dark
-  readMore: false # show read more button
+  readMore: true # show read more button
   readNextPosts: 5  # show 5 related posts, 0 by default
   disableSummary: false
   copyCodeButton: true # true by default
