--- a/docs/tmux.conf
+++ b/docs/tmux.conf
@@ -8,18 +8,23 @@ unbind-key h
 bind-key h select-pane -L
 unbind-key l
 bind-key l select-pane -R
-
+ 
+bind-key t choose-tree
+ 
 set -s escape-time 0
-
+set -g status-style bg='#ddeecc'
+set -g window-status-style fg='#4f7777'
+set -g window-status-current-style fg='#000000'
+set -g pane-active-border-style fg='#ddeecc'
+ 
 bind-key -T copy-mode-vi v send -X begin-selection
 bind-key -T copy-mode-vi V send -X select-line
 bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
-
+ 
 set -g mouse on #Allows you to scroll up through terminal output with your mouse wheel
 set -g set-clipboard on
-set -g allow-passthrough on
 bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xsel -i --clipboard"
-
+ 
 bind-key -T copy-mode-vi 'C-h' select-pane -L
 bind-key -T copy-mode-vi 'C-j' select-pane -D
 bind-key -T copy-mode-vi 'C-k' select-pane -U
